[tool.poetry]
name = "repl_python3_searchthisimage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
google-cloud = "^0.34.0"
google-cloud-vision = "^2.4.2"
pytz = "^2021.1"
htmldate = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
